[project]
name = "pattern-cli"
version = "0.0.1"
authors = [
  { name="HashLDash", email="digameoquepensas@gmail.com" },
]
description = "Make command-line interface scripts with ease"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/HashLDash/cli"
"Bug Tracker" = "https://github.com/HashLDash/cli/issues"
