[metadata]
name = pattern-cli
version = 0.0.4
author = HashLDash
author_email = digameoquepensas@gmail.com
description = Create command-line interfaces with ease
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HashLDash/cli
project_urls =
    Bug Tracker = https://github.com/HashLDash/cli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.data_files]
. = requirements.txt
